<resources>
    <string name="kde_connect">KDE Connect</string>
    <string name="manifest_label_share">Send to Device</string>
    <string name="foreground_notification_no_devices">Not connected to any device</string>
    <string name="foreground_notification_devices">Connected to: %s</string>
    <string name="foreground_notification_send_clipboard">Send Clipboard</string>
    <string name="pref_plugin_telephony">Telephony notifier</string>
    <string name="pref_plugin_telephony_desc">Send notifications for incoming calls</string>
    <string name="pref_plugin_battery">Battery report</string>
    <string name="pref_plugin_battery_desc">Periodically report battery status</string>
    <string name="pref_plugin_connectivity_report">Connectivity report</string>
    <string name="pref_plugin_connectivity_report_desc">Report network signal strength and status</string>
    <string name="pref_plugin_digitizer">Drawing tablet</string>
    <string name="pref_plugin_digitizer_desc">Use your device as a pressure sensitive drawing tablet</string>
    <string name="pref_plugin_sftp">Filesystem access</string>
    <string name="pref_plugin_sftp_desc">Allows to browse this device\'s filesystem remotely</string>
    <string name="pref_plugin_clipboard">Clipboard sync</string>
    <string name="pref_plugin_clipboard_desc">Share the clipboard content</string>
    <string name="pref_plugin_clipboard_sent">Clipboard Sent</string>
    <string name="clipboard_preference_key_skip_sensitive" translatable="false">clipboard_skip_sensitive_sync</string>
    <string name="clipboard_preference_title_skip_sensitive">Skip sensitive clipboard sync</string>
    <string name="clipboard_preference_summary_skip_sensitive">Don\'t auto-sync passwords or other content marked as sensitive</string>
    <string name="pref_plugin_mousepad">Remote input</string>
    <string name="pref_plugin_mousepad_desc_nontv">Use your phone or tablet as a touchpad and keyboard</string>
    <string name="pref_plugin_mousepad_desc_tv">Use your phone or tablet as a TV remote</string>
    <string name="pref_plugin_presenter">Presentation remote</string>
    <string name="pref_plugin_presenter_desc">Use your device to change slides in a presentation</string>
    <string name="pref_plugin_remotekeyboard_ime">Keyboard receiver (via Android keyboard)</string>
    <string name="pref_plugin_remotekeyboard_accessibility">Keyboard receiver (via accessibility)</string>
    <string name="pref_plugin_remotekeyboard_desc">Receive keypress events from remote devices</string>
    <string name="pref_plugin_mpris">Multimedia controls</string>
    <string name="pref_plugin_mpris_desc">Provides a remote control for your media player</string>
    <string name="pref_plugin_runcommand">Run Command</string>
    <string name="pref_plugin_runcommand_desc">Trigger remote commands from your phone or tablet</string>
    <string name="pref_plugin_contacts">Contacts Synchronizer</string>
    <string name="pref_plugin_contacts_desc">Allow synchronizing the device\'s contacts book</string>
    <string name="pref_plugin_ping">Ping</string>
    <string name="pref_plugin_ping_desc">Send and receive pings</string>
    <string name="pref_plugin_notifications">Notification sync</string>
    <string name="pref_plugin_notifications_desc">Access your notifications from other devices</string>
    <string name="pref_plugin_receive_notifications">Receive notifications</string>
    <string name="pref_plugin_receive_notifications_desc">Receive notifications from the other device and display them on Android</string>
    <string name="pref_plugin_sharereceiver">Share and receive</string>
    <string name="pref_plugin_sharereceiver_desc">Share files and URLs between devices</string>
    <string name="pref_plugin_inputdevicesreceiver">Share input devices</string>
    <string name="pref_plugin_inputdevicesreceiver_desc">Share mouse and keyboard with the remote device</string>
    <string name="device_list_empty">No devices</string>
    <string name="ok">OK</string>
    <string name="sad_ok">OK :(</string>
    <string name="cancel">Cancel</string>
    <string name="open_settings">Open settings</string>
    <string name="open_accessibility_settings">Open accessibility settings</string>
    <string name="open_input_settings">Open keyboard settings</string>
    <string name="no_permissions">You need to grant permission to access notifications</string>
    <string name="no_permission_mprisreceiver">To be able to control your media players you need to grant access to the notifications</string>
    <string name="no_permissions_remotekeyboard_ime">To receive keypresses you need to activate the KDE Connect Remote Keyboard as an Android input method</string>
    <string name="no_permissions_remotekeyboard_accessibility">To receive keypresses you need to grant Accessibility permissions</string>
    <string name="send_ping">Send ping</string>
    <string name="open_mpris_controls">Multimedia control</string>
    <string name="remotekeyboard_editing_only" translatable="false">remotekeyboard_editing_only</string>
    <string name="remotekeyboard_editing_only_title" translatable="true">Handle remote keys only when editing</string>
    <string name="remotekeyboard_not_connected" translatable="true">There is no active remote keyboard connection, establish one in kdeconnect</string>
    <string name="remotekeyboard_connected" translatable="true">Remote keyboard connection is active</string>
    <string name="remotekeyboard_multiple_connections" translatable="true">There is more than one remote keyboard connection, select the device to configure</string>
    <string name="open_mousepad">Remote input</string>
    <string name="open_mousepad_tv">TV remote</string>
    <string name="mousepad_info">Move a finger on the screen to move the mouse cursor. Tap for a click, and use two/three fingers for right and middle buttons. Use 2 fingers to scroll. Use a long press to drag\'n drop. Gyro mouse functionality can be enabled from plugin preferences</string>
    <string name="mousepad_info_no_gestures">Move a finger on the screen to move the mouse cursor, tap for a click.</string>
    <string name="mousepad_keyboard_input_not_supported">Keyboard input not supported by the paired device</string>
    <string name="mousepad_single_tap_settings_title">Set one finger tap action</string>
    <string name="mousepad_double_tap_settings_title">Set two finger tap action</string>
    <string name="mousepad_triple_tap_settings_title">Set three finger tap action</string>
    <string name="mousepad_sensitivity_settings_title">Set touchpad sensitivity</string>
    <string name="mousepad_mouse_buttons_title">Show mouse buttons</string>
    <string name="mousepad_acceleration_profile_settings_title">Set pointer acceleration</string>
    <string name="mousepad_single_tap_key" translatable="false">mousepad_single_tap_key</string>
    <string name="mousepad_double_tap_key" translatable="false">mousepad_double_tap_key</string>
    <string name="mousepad_triple_tap_key" translatable="false">mousepad_triple_tap_key</string>
    <string name="mousepad_sensitivity_key" translatable="false">mousepad_sensitivity_key</string>
    <string name="mousepad_acceleration_profile_key" translatable="false">mousepad_acceleration_profile_key</string>
    <string name="mousepad_scroll_direction_title">Reverse Scrolling Direction</string>
    <string name="mousepad_scroll_direction" translatable="false">mousepad_scroll_direction</string>
    <string name="mousepad_scroll_sensitivity" translatable="false">mousepad_scroll_sensitivity</string>
    <string name="mousepad_scroll_sensitivity_title">Scroll sensitivity</string>
    <string name="gyro_mouse_enabled" translatable="false">gyro_mouse_enabled</string>
    <string name="left_click">Send Left Click</string>
    <string name="right_click">Send Right Click</string>
    <string name="middle_click">Send Middle Click</string>
    <string name="device_not_paired">Device not paired</string>
    <string name="request_pairing">Request pairing</string>
    <string name="pairing_accept">Accept</string>
    <string name="pairing_reject">Reject</string>
    <string name="pairing_explanation">Pairing two devices will give them access to each other. Only pair together your own devices.</string>
    <string name="custom_device_list">Add devices by IP</string>
    <string name="share_notification_preference">Noisy notifications</string>
    <string name="share_notification_preference_summary">Vibrate and play a sound when receiving a file</string>
    <string name="share_destination_customize">Customize destination directory</string>
    <string name="share_destination_customize_summary_disabled">Received files will appear in Downloads</string>
    <string name="share_destination_customize_summary_enabled">Files will be stored in the directory below</string>
    <string name="share_destination_folder_preference">Destination directory</string>
    <string name="digitizer_preference_key_hide_draw_button" translatable="false">digitizer_hide_draw_button</string>
    <string name="digitizer_preference_title_hide_draw_button">Hide draw button</string>
    <string name="digitizer_preference_summary_hide_draw_button">Completely hides the draw button, making finger drawing impossible. Only enable this if your device supports stylus input.</string>
    <string name="digitizer_preference_key_draw_button_side" translatable="false">digitizer_draw_button_side</string>
    <string name="digitizer_preference_title_draw_button_side">Side of “Draw with finger” button</string>
    <string name="digitizer_preference_value_default_draw_button_side" translatable="false">bottom_left</string>
    <string name="refresh">Refresh</string>
    <string name="runcommand_category_device_controls_title">Device Controls</string>
    <string name="runcommand_category_device_controls" translatable="false">runcommand_category_device_controls</string>
    <string name="runcommand_device_controls_summary">If your device supports Device Controls, commands you have configured will appear there.</string>
    <string name="set_runcommand_name_as_title">set_runcommand_name_as_title</string>
    <string name="runcommand_name_as_title_title">Show name as title</string>
    <string name="trusted_networks">Trusted networks</string>
    <string name="bigscreen_home">Home</string>
    <string name="bigscreen_close">Close</string>
    <string name="bigscreen_up">Up</string>
    <string name="bigscreen_left">Left</string>
    <string name="bigscreen_select">Select</string>
    <string name="bigscreen_right">Right</string>
    <string name="bigscreen_down">Down</string>
    <string name="bigscreen_back">Back</string>
    <string name="bigscreen_mic">Mic</string>
    <string name="set_group_message_as_mms_title">Send group MMS</string>
    <string name="set_group_message_as_mms" translatable="false">set_group_message_as_mms</string>
    <string name="set_long_text_as_mms_title">Send long text as MMS</string>
    <string name="set_long_text_as_mms" translatable="false">set_long_text_as_mms</string>
    <string name="convert_to_mms_after_title">Convert to MMS</string>
    <string name="convert_to_mms_after" translatable="false">convert_to_mms_after</string>
    <string name="convert_to_mms_after_default" translatable="false">3</string>
    <string name="pref_presenter_enable_volume_keys" translatable="false">pref_presenter_enable_volume_keys</string>
    <string name="pref_presenter_enable_volume_keys_title">Volume keys change slides</string>
    <string name="pref_presenter_sensitivity" translatable="false">pref_presenter_sensitivity</string>
    <string name="pref_presenter_sensitivity_title">Pointer sensitivity</string>
    <string name="pref_presenter_enable_volume_keys_summary">On standby not supported on Android version between 13 and 15</string>
</resources>