<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: 2020 Aniket Kumar <anikketkumar786@gmail.com>

SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:keep="@xml/smsplugin_preferences">

    <SwitchPreference
        android:id="@+id/group_message_preference"
        android:defaultValue="true"
        android:key="@string/set_group_message_as_mms"
        android:title="@string/set_group_message_as_mms_title" />

    <SwitchPreference
        android:id="@+id/long_text_message_preference"
        android:defaultValue="false"
        android:key="@string/set_long_text_as_mms"
        android:title="@string/set_long_text_as_mms_title" />

    <ListPreference
        android:id="@+id/convert_to_mms_after_preference"
        android:defaultValue="@string/convert_to_mms_after_default"
        android:entries="@array/convert_to_mms_after_entries"
        android:entryValues="@array/convert_to_mms_after_values"
        android:key="@string/convert_to_mms_after"
        android:summary="%s"
        android:title="@string/convert_to_mms_after_title" />

</PreferenceScreen>
