<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: 2023 Albert Vaca Cintora <albertvaka@gmail.com>

SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kdeconnect="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh_24dp"
        android:orderInCategory="200"
        android:title="@string/refresh"
        kdeconnect:showAsAction="never" />

    <item
        android:id="@+id/menu_custom_device_list"
        android:orderInCategory="900"
        android:title="@string/custom_device_list"
        kdeconnect:showAsAction="never" />

    <item
        android:id="@+id/menu_trusted_networks"
        android:orderInCategory="900"
        android:title="@string/trusted_networks"
        kdeconnect:showAsAction="never" />

</menu>
