<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: 2021 Philip Cohn-Cort <cliabhach@gmail.com>

SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pairing_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:id="@+id/pair_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:text="@string/device_not_paired"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/pairing_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dip"
        android:text="@string/pairing_explanation" />

    <TextView
        android:id="@+id/pair_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:layout_marginBottom="8dip"
        android:importantForAccessibility="no"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:drawableStartCompat="@drawable/ic_key" />

    <ProgressBar
        android:id="@+id/pair_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pair_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_pairing" />


    <LinearLayout
        android:id="@+id/pair_request_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:paddingVertical="4dp"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/accept_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pairing_accept" />

        <android.widget.Space
                android:layout_width="8dp"
                android:layout_height="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reject_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pairing_reject" />

    </LinearLayout>
</LinearLayout>
